fix: make changes in offers, reviews block after testing the project (desktop)

--- a/source/index.html
+++ b/source/index.html
@@ -385,50 +385,52 @@
     </section>
 
     <section class="offers" data-test="offers">
-      <h2 class="offers__title">Акции</h2>
-      <article class="offers__card offers__card--main">
-        <div class="offers__container">
-          <h3>Год <span>4999</span></h3>
-          <p>Безлимитный абонемент в тренажёрный зал</p>
-          <div class="offers__button-container">
-            <a class="offers__details button-no-borders button-no-borders--primary" href="#">Подробнее</a>
+      <div class="offers__main-container">
+        <h2 class="offers__title">Акции</h2>
+        <article class="offers__card offers__card--main">
+          <div class="offers__container">
+            <h3>Год <span>4999</span></h3>
+            <p>Безлимитный абонемент в тренажёрный зал</p>
+            <div class="offers__button-container">
+              <a class="offers__details button-no-borders button-no-borders--primary" href="#">Подробнее</a>
+            </div>
           </div>
-        </div>
-        <picture>
-          <source media="(min-width: 1366px)" width="280" height="460" type="image/webp"
-            srcset="img/offers/girl-desktop@1x.webp 1x, img/offers/girl-desktop@2x.webp 2x">
-          <source media="(min-width: 768px)" width="400" height="462" type="image/webp"
-            srcset="img/offers/girl-tablet@1x.webp 1x, img/offers/girl-tablet@2x.webp 2x">
-          <source width="320" height="360" type="image/webp"
-            srcset="img/offers/girl-mobile@1x.webp 1x, img/offers/girl-mobile@2x.webp 2x">
+          <picture>
+            <source media="(min-width: 1366px)" width="280" height="460" type="image/webp"
+              srcset="img/offers/girl-desktop@1x.webp 1x, img/offers/girl-desktop@2x.webp 2x">
+            <source media="(min-width: 768px)" width="400" height="462" type="image/webp"
+              srcset="img/offers/girl-tablet@1x.webp 1x, img/offers/girl-tablet@2x.webp 2x">
+            <source width="320" height="360" type="image/webp"
+              srcset="img/offers/girl-mobile@1x.webp 1x, img/offers/girl-mobile@2x.webp 2x">
 
-          <source media="(min-width: 1366px)" width="280" height="460" type="image/jpg"
-            srcset="img/offers/girl-desktop@1x.jpg 1x, img/offers/girl-desktop@2x.jpg 2x">
-          <source media="(min-width: 768px)" width="400" height="462" type="image/jpg"
-            srcset="img/offers/girl-tablet@1x.jpg 1x, img/offers/girl-tablet@2x.jpg 2x">
-          <img class="offers__image" src="img/offers/girl-mobile@1x.jpg" width="320" height="360"
-            srcset="img/offers/girl-mobile@2x.jpg" alt="Фотография девушки в спортивной форме">
-        </picture>
-      </article>
+            <source media="(min-width: 1366px)" width="280" height="460" type="image/jpg"
+              srcset="img/offers/girl-desktop@1x.jpg 1x, img/offers/girl-desktop@2x.jpg 2x">
+            <source media="(min-width: 768px)" width="400" height="462" type="image/jpg"
+              srcset="img/offers/girl-tablet@1x.jpg 1x, img/offers/girl-tablet@2x.jpg 2x">
+            <img class="offers__image" src="img/offers/girl-mobile@1x.jpg" width="320" height="360"
+              srcset="img/offers/girl-mobile@2x.jpg" alt="Фотография девушки в спортивной форме">
+          </picture>
+        </article>
 
-      <article class="offers__card offers__card--secondary">
-        <h3>Месяц бесплатно</h3>
-        <p>Приведи друга, получи абонемент в подарок</p>
+        <article class="offers__card offers__card--secondary">
+          <h3>Месяц бесплатно</h3>
+          <p>Приведи друга, получи абонемент в подарок</p>
 
-        <div class="offers__button-container">
-          <a class="offers__details button-no-borders button-no-borders--secondary" href="#">Подробнее</a>
-        </div>
-      </article>
+          <div class="offers__button-container">
+            <a class="offers__details button-no-borders button-no-borders--secondary" href="#">Подробнее</a>
+          </div>
+        </article>
 
-      <article class="offers__card offers__card--secondary">
+        <article class="offers__card offers__card--secondary">
 
-        <h3>Скидка 20%</h3>
-        <p>Корпоративный фитнес с командой</p>
+          <h3>Скидка 20%</h3>
+          <p>Корпоративный фитнес с командой</p>
 
-        <div class="offers__button-container">
-          <a class="offers__details button-no-borders button-no-borders--secondary" href="#">Подробнее</a>
-        </div>
-      </article>
+          <div class="offers__button-container">
+            <a class="offers__details button-no-borders button-no-borders--secondary" href="#">Подробнее</a>
+          </div>
+        </article>
+      </div>
     </section>
 
     <section class="faq" data-test="faq">
@@ -601,60 +603,62 @@
     </section>
 
     <section class="reviews" data-test="reviews">
-      <h2 class="reviews__title">Отзывы</h2>
-      <div class="reviews__swiper swiper">
-        <div class="reviews__swiper-wrapper swiper-wrapper">
-          <div class="reviews__card swiper-slide">
-            <div>
-              <picture>
-                <source width="490" height="682" type="image/webp"
-                  srcset="img/reviews/anna-orlova-avatar@1x.webp 1x, img/reviews/anna-orlova-avatar@1x.webp 2x">
+      <div class="reviews__main-container">
+        <h2 class="reviews__title">Отзывы</h2>
+        <div class="reviews__swiper swiper">
+          <div class="reviews__swiper-wrapper swiper-wrapper">
+            <div class="reviews__card swiper-slide">
+              <div>
+                <picture>
+                  <source width="490" height="682" type="image/webp"
+                    srcset="img/reviews/anna-orlova-avatar@1x.webp 1x, img/reviews/anna-orlova-avatar@1x.webp 2x">
 
-                <img src="img/reviews/anna-orlova-avatar@1x.jpg" width="490" height="682"
-                  srcset="img/reviews/anna-orlova-avatar@2x.jpg" alt="Аватар Анны Орловой">
-              </picture>
+                  <img src="img/reviews/anna-orlova-avatar@1x.jpg" width="490" height="682"
+                    srcset="img/reviews/anna-orlova-avatar@2x.jpg" alt="Аватар Анны Орловой">
+                </picture>
+              </div>
+              <h3>Анна Орлова</h3>
+              <blockquote>«Хожу в Supergym уже больше года. Нравится, что в клубе всегда чисто,
+                тренажёры обновляют,
+                персонал дружелюбный. Зал просторный, даже в вечернее время нет очередей»</blockquote>
             </div>
-            <h3>Анна Орлова</h3>
-            <blockquote>«Хожу в Supergym уже больше года. Нравится, что в клубе всегда чисто,
-              тренажёры обновляют,
-              персонал дружелюбный. Зал просторный, даже в вечернее время нет очередей»</blockquote>
-          </div>
-          <div class="reviews__card swiper-slide">
-            <div>
-              <picture>
-                <source width="490" height="682" type="image/webp"
-                  srcset="img/reviews/anna-orlova-avatar@1x.webp 1x, img/reviews/anna-orlova-avatar@1x.webp 2x">
+            <div class="reviews__card swiper-slide">
+              <div>
+                <picture>
+                  <source width="490" height="682" type="image/webp"
+                    srcset="img/reviews/anna-orlova-avatar@1x.webp 1x, img/reviews/anna-orlova-avatar@1x.webp 2x">
 
-                <img src="img/reviews/anna-orlova-avatar@1x.jpg" width="490" height="682"
-                  srcset="img/reviews/anna-orlova-avatar@2x.jpg" alt="Аватар Анны Орловой">
-              </picture>
+                  <img src="img/reviews/anna-orlova-avatar@1x.jpg" width="490" height="682"
+                    srcset="img/reviews/anna-orlova-avatar@2x.jpg" alt="Аватар Анны Орловой">
+                </picture>
+              </div>
+              <h3>Олег Попов</h3>
+              <blockquote>«Хожу в Supergym больше 6 лет, всегда чистые раздевалки, просторный зал,
+                нет толкучки, удобная локация. Я доволен!»</blockquote>
             </div>
-            <h3>Олег Попов</h3>
-            <blockquote>«Хожу в Supergym больше 6 лет, всегда чистые раздевалки, просторный зал,
-              нет толкучки, удобная локация. Я доволен!»</blockquote>
-          </div>
-          <div class="reviews__card swiper-slide">
-            <div>
-              <picture>
-                <source width="490" height="682" type="image/webp"
-                  srcset="img/reviews/anna-orlova-avatar@1x.webp 1x, img/reviews/anna-orlova-avatar@1x.webp 2x">
+            <div class="reviews__card swiper-slide">
+              <div>
+                <picture>
+                  <source width="490" height="682" type="image/webp"
+                    srcset="img/reviews/anna-orlova-avatar@1x.webp 1x, img/reviews/anna-orlova-avatar@1x.webp 2x">
 
-                <img src="img/reviews/anna-orlova-avatar@1x.jpg" width="490" height="682"
-                  srcset="img/reviews/anna-orlova-avatar@2x.jpg" alt="Аватар Анны Орловой">
-              </picture>
+                  <img src="img/reviews/anna-orlova-avatar@1x.jpg" width="490" height="682"
+                    srcset="img/reviews/anna-orlova-avatar@2x.jpg" alt="Аватар Анны Орловой">
+                </picture>
+              </div>
+              <h3>Артем Алексеев</h3>
+              <blockquote>«Нравится спортзал, всегда проходят интересные мероприятия, в которых я
+                люблю поучаствовать. Лучший зал, в который я ходил»</blockquote>
             </div>
-            <h3>Артем Алексеев</h3>
-            <blockquote>«Нравится спортзал, всегда проходят интересные мероприятия, в которых я
-              люблю поучаствовать. Лучший зал, в который я ходил»</blockquote>
           </div>
         </div>
-      </div>
 
-      <div class="reviews__buttons-container arrows">
-        <button class="reviews__button reviews__button--prev arrows__button arrows__button--prev swiper-button-prev"
-          type="button" aria-label="Посмотреть предыдущий слайд"></button>
-        <button class="reviews__button reviews__button--next arrows__button arrows__button--next swiper-button-next"
-          type="button" aria-label="Посмотреть следующий слайд"></button>
+        <div class="reviews__buttons-container arrows">
+          <button class="reviews__button reviews__button--prev arrows__button arrows__button--prev swiper-button-prev"
+            type="button" aria-label="Посмотреть предыдущий слайд"></button>
+          <button class="reviews__button reviews__button--next arrows__button arrows__button--next swiper-button-next"
+            type="button" aria-label="Посмотреть следующий слайд"></button>
+        </div>
       </div>
     </section>
 
