fix: make changes after testing the project (mobile)

--- a/source/index.html
+++ b/source/index.html
@@ -446,7 +446,7 @@
         <div class="faq__tab-content">
           <div class="faq__tab-pane faq__tab-pane--active" id="tab1">
             <div class="faq__tab-item faq__tab-item--active">
-              <h3>Как стать членом фитнес-центра?</h3>
+              <h3>Как стать членом<br> фитнес-центра?</h3>
               <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
                   ответа на
                   вопрос</span></button>
